# magpylib_jax

./: .gitignore  CHANGELOG.md  LICENSE  MIGRATION_PLAN.md  PARITY_MATRIX.md  README.md  pyproject.toml
.github/workflows/: benchmark.yml  ci.yml  full-validation.yml  profiling-nightly.yml  publish-pypi.yml
benchmarks/: thresholds.json
docs/: architecture.md  changelog.md  conf.py  equations.md  examples.md  index.md  numerics.md  overview.md  parity.md  parity_checklist.md  performance.md  quickstart.md  roadmap.md  testing.md
docs/examples/: functional_api.md  index.md  object_api.md  optimization.md  performance.md
docs/reference/: api.md
profiling/: hlo_baseline.json  hlo_baseline_getB_jit.json  thresholds.json  thresholds_getB_jit.json
scripts/: benchmark_vs_magpylib.py  check_benchmark_thresholds.py  check_hlo_diffs.py  check_profiling_thresholds.py  profile_getB_jit.py  profile_kernels.py  profile_wham_workload.py  summarize_profiling.py
src/magpylib_jax/: __init__.py  _types.py  collection.py  constants.py  functional.py  sensor.py
src/magpylib_jax/core/: __init__.py  base.py  elliptic.py  geometry.py  kernels.py  kernels_extended.py  style.py
src/magpylib_jax/current/: __init__.py  circle.py  polyline.py  triangle_sheet.py  triangle_strip.py
src/magpylib_jax/magnet/: __init__.py  cuboid.py  cylinder.py  cylinder_segment.py  sphere.py  tetrahedron.py  triangular_mesh.py
src/magpylib_jax/misc/: __init__.py  custom.py  dipole.py  triangle.py
tests/: test_circle_cache_semantics.py  test_compatibility.py  test_coverage_smoke.py  test_motion_shape_compat.py  test_packaging_metadata.py  test_prep_cache_semantics.py  test_trimesh_semantics.py
tests/differentiability/: test_circle_grad.py  test_dipole_grad.py  test_extended_grad.py  test_magnet_grad.py  test_pending_grad.py
tests/jit/: test_getB_jit.py
tests/parity/: test_circle_parity.py  test_cuboid_parity.py  test_cylinder_parity.py  test_cylinder_segment_parity.py  test_dipole_parity.py  test_polyline_parity.py  test_sphere_parity.py  test_tetrahedron_parity.py  test_triangle_parity.py  test_trianglesheet_parity.py  test_trianglestrip_parity.py  test_triangular_mesh_parity.py
tests/parity_gates/: test_source_boundaries.py  test_source_profiles.py
tests/performance/: test_perf_smoke.py
tests/physics/: test_core_physics.py
tests/upstream_mirror/: test_BHMJ_level.py  test_getBH_interfaces.py  test_obj_BaseGeo.py  test_obj_BaseGeo_v4motion.py  test_obj_Collection.py  test_obj_CylinderSegment.py  test_obj_Sensor.py  test_obj_TriangleStrip_Sheet.py  test_obj_TriangularMesh.py  test_path.py  test_physics_consistency.py
