[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "magpylib-jax"
version = "0.1.0"
description = "Differentiable JAX-native magnetic field library inspired by Magpylib"
readme = "README.md"
license = { text = "BSD-2-Clause" }
requires-python = ">=3.11"
authors = [
  { name = "uwplasma" }
]
keywords = ["jax", "magnetism", "magnetic field", "differentiable physics"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "jax[cpu]>=0.5.0",
  "numpy>=1.26",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "magpylib>=5.2",
]
docs = [
  "sphinx>=8.0",
  "myst-parser>=4.0",
  "furo>=2024.8.6",
]

[project.urls]
Homepage = "https://github.com/uwplasma/magpylib_jax"
Repository = "https://github.com/uwplasma/magpylib_jax"
Issues = "https://github.com/uwplasma/magpylib_jax/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/magpylib_jax"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-config --strict-markers --cov=src/magpylib_jax --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]
markers = [
  "parity_gate: strict parity behavior profiles used as CI gates",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
files = ["src"]
disallow_untyped_defs = false
check_untyped_defs = true
warn_return_any = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/magpylib_jax"]

[tool.coverage.report]
fail_under = 90
