[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "magpylib-jax"
version = "1.0.0"
description = "Differentiable JAX-native magnetic field modeling with Magpylib-compatible APIs"
readme = "README.md"
license = { text = "BSD-2-Clause" }
requires-python = ">=3.11"
authors = [
  { name = "uwplasma" }
]
keywords = ["jax", "magpylib", "magnetism", "magnetic field", "differentiable physics"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "jax>=0.6.1,<0.7",
  "numpy>=1.26,<3",
  "scipy>=1.11,<2",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "magpylib>=5.2",
  "pandas>=2.2",
]
docs = [
  "sphinx>=8.0",
  "myst-parser>=4.0",
  "furo>=2024.8.6",
]

[project.urls]
Homepage = "https://github.com/uwplasma/magpylib_jax"
Repository = "https://github.com/uwplasma/magpylib_jax"
Documentation = "https://magpylib-jax.readthedocs.io/"
Changelog = "https://github.com/uwplasma/magpylib_jax/blob/main/CHANGELOG.md"
Issues = "https://github.com/uwplasma/magpylib_jax/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/magpylib_jax"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-config --strict-markers --cov=src/magpylib_jax --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]
markers = [
  "parity_gate: strict parity behavior profiles used as CI gates",
  "slow: extended parity checks run outside the fast PR CI path",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
files = ["src"]
disallow_untyped_defs = false
check_untyped_defs = true
warn_return_any = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "magpylib_jax.collection",
  "magpylib_jax.core.base",
  "magpylib_jax.functional",
  "magpylib_jax.misc.custom",
  "magpylib_jax.sensor",
]
ignore_errors = true

[tool.coverage.run]
source = ["src/magpylib_jax"]

[tool.coverage.report]
fail_under = 90
